# amciuday

./: .editorconfig  .gitignore  Makefile  README.md  REQUIREMENTS.MD.applescript  render.yaml  requirements.txt  runtime.txt
apps/backend/: .coverage  pyproject.toml  requirements.txt  start.py
apps/backend/app/: db.py  main.py
apps/backend/app/core/: settings.py
apps/backend/app/models/: models.py  schemas.py
apps/backend/app/routers/: history.py  ingredients.py  recipes.py  seed.py
apps/backend/app/services/: normalization.py  recipe_filter.py
apps/backend/tests/: test_normalization.py  test_recipe_filter.py
tools/seed/: generate_recipes.py  requirements.txt  scrape.py
